# elogv

./: .git-blame-ignore-revs  .mailmap  .pre-commit-config.yaml  ChangeLog  ChangeLog.old  INSTALL  MANIFEST.in  Makefile  PKG-INFO  README  elogv  pyproject.toml  setup.py
.github/workflows/: pre-commit-run.yml
man/: .gitattributes  elogv.1  elogv.1.de  elogv.1.es  elogv.1.it  elogv.1.pl
po/: de.po  elogv.pot  es.po  it.po  pl.po
